[package]
name = "bartog"
version = "1.0.0"
authors = ["Ryan Wiedemann <Ryan1729@gmail.com>"]
edition = "2018"

[dependencies]

#[dependencies.wasm-bindgen]
#version = "0.2.45"
#optional = true

[dependencies.web]
path = "libs/web"

[dependencies.game]
path = "libs/game"

[features]
stdweb_version = ["web/stdweb_version"]
#web_sys_version = ["web/web_sys_version", "wasm-bindgen"]
invariant-checking = ["game/invariant-checking"]
logging = ["game/logging"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
