[package]
name = "bartog-stdweb"
version = "1.0.0"
authors = ["Ryan Wiedemann <Ryan1729@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
stdweb = "0.4"

[dependencies.game]
path = "../libs/game"

[dependencies.platform_types]
path = "../libs/platform_types"

[features]
invariant-checking = ["game/invariant-checking"]
logging = ["game/logging"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
