[package]
name = "bartog"
version = "0.2.0"
authors = ["Ryan Wiedemann <Ryan1729@gmail.com>"]
edition = "2021"

[dependencies]

[dependencies.wasm-bindgen]
version = "0.2.45"

[dependencies.platform]
path = "../libs/platform"

[dependencies.game]
path = "../libs/game"

[features]
default = ["platform/non-web-sound"]
invariant-checking = ["game/invariant-checking"]
logging = ["game/logging"]
