[package]
name = "choices"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]

[dependencies]

[dependencies.game_state]
path = "../game_state"

[dependencies.common]
path = "../common"

[dependencies.platform_types]
path = "../platform_types"

[features]
default = []
invariant-checking = []
