[package]
name = "common"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]

[dependencies]
rand = "0.5"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.card_flags]
path = "../card_flags"

[dependencies.features]
path = "../features"

[dependencies.inner_common]
path = "../inner_common"

[dev-dependencies]
quickcheck = "0.6"
criterion = "0.2"

[[bench]]
name = "text_benchmark"
harness = false
