[package]
name = "game"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]

[dependencies]
rand = "0.5"

[dependencies.choices]
path = "../choices"

[dependencies.game_state]
path = "../game_state"

[dependencies.common]
path = "../common"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.rule_changes]
path = "../rule_changes"

[features]
default = []
invariant-checking = []
