[package]
name = "game"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/game.rs"

[dependencies]

[dependencies.choices]
path = "../choices"

[dependencies.animations]
path = "../animations"

[dependencies.game_state]
path = "../game_state"

[dependencies.common]
path = "../common"

[dependencies.features]
path = "../features"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.rule_changes]
path = "../rule_changes"

[features]
default = []
invariant-checking = ["features/invariant-checking"]
logging = ["features/logging"]
