[package]
name = "inner_common"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.features]
path = "../features"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.screen]
path = "../screen"

[dependencies.xs]
path = "../xs"

[dev-dependencies]
quickcheck = "0.6"

[features]
abgr = []
argb = []

