[package]
name = "platform"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "src/platform.rs"

[dependencies]
softbuffer = "0.1.1"
winit = "0.26.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.22", features = ["HtmlCanvasElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.15.0"
spin_sleep = "1.1.1"
xs = { path = "../xs" }

[dependencies.platform_types]
path = "../platform_types"

[dependencies.render]
path = "../render"

[dependencies.screen]
path = "../screen"

[features]
default = []
non-web-sound = []
