[package]
name = "web"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2.45", optional = true }
web-sys = { version = "0.3.22", optional = true }
winit = { version = "0.26.1", optional = true }

[dependencies.platform_types]
path = "../platform_types"

[features]
stdweb_version = ["stdweb"]
web_sys_version = ["wasm-bindgen", "web-sys", "winit"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
