[package]
name = "web"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "src/web.rs"

[dependencies]
web-sys = "0.3.22"
winit = "0.26.1"

[dependencies.platform_types]
path = "../platform_types"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
